--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -136,7 +136,8 @@
     grid-template-columns: repeat(2, 1fr);
   }
 
-  .about-interest-tags button {
+  .about-interest-tags button,
+  .about-interest-tags span {
     width: 100%;
     justify-content: center;
     font-size: 1rem !important;
